pielang/src/snapshots/pielang__test__check_synthesize_(the Nat 'a).snap
---
source: pielang/src/test.rs
description: "(the Nat 'a)"
expression: output
---
error: Expected Nat but given Atom
