pielang/src/snapshots/pielang__test__check_synthesize_(the Nat (add1 zero)).snap
---
source: pielang/src/test.rs
description: (the Nat (add1 zero))
expression: output
---
type: Nat
expr: 1
