pielang/src/snapshots/pielang__test__check_synthesize_(the Nat 114).snap
---
source: pielang/src/test.rs
description: (the Nat 114)
expression: output
---
type: Nat
expr: 114
