pielang/src/snapshots/pielang__test__check_synthesize_(the Nat U).snap
---
source: pielang/src/test.rs
description: (the Nat U)
expression: output
---
error: Expected Nat but given U
