pielang/src/snapshots/pielang__test__check_synthesize_(the Nat zero).snap
---
source: pielang/src/test.rs
description: (the Nat zero)
expression: output
---
type: Nat
expr: 0
