pielang/src/snapshots/pielang__test__check_synthesize_(the Trivial 'a).snap
---
source: pielang/src/test.rs
description: "(the Trivial 'a)"
expression: output
---
Error: Expected Trivial but given Atom
