pielang/src/snapshots/pielang__test__check_synthesize_(the Trivial 0).snap
---
source: pielang/src/test.rs
description: (the Trivial 0)
expression: output
---
Error: Expected Trivial but given Nat
