pielang/src/snapshots/pielang__test__check_synthesize_(the Trivial sole).snap
---
source: pielang/src/test.rs
description: (the Trivial sole)
expression: output
---
type: Trivial
expr: sole
