pielang/src/snapshots/pielang__test__check_synthesize_(the U 'a).snap
---
source: pielang/src/test.rs
description: "(the U 'a)"
expression: output
---
Error: Expected U but given Atom
