pielang/src/snapshots/pielang__test__check_synthesize_(the U Absurd).snap
---
source: pielang/src/test.rs
description: (the U Absurd)
expression: output
---
type: U
expr: Absurd
