pielang/src/snapshots/pielang__test__check_synthesize_(the U Atom).snap
---
source: pielang/src/test.rs
description: (the U Atom)
expression: output
---
type: U
expr: Atom
