pielang/src/snapshots/pielang__test__check_synthesize_(the U Trivial).snap
---
source: pielang/src/test.rs
description: (the U Trivial)
expression: output
---
type: U
expr: Trivial
